update css file

--- a/css/custom.css
+++ b/css/custom.css
@@ -97,7 +97,6 @@ footer .nav-link:hover {
   text-decoration: none;
 }
 
-/* Left image block */
 .contact-us , .welcome{
   animation: titlePulse 1.6s ease-in-out infinite;
 }
@@ -221,7 +220,6 @@ footer .nav-link:hover {
 }
 
 /*shop style*/
-/* Only if you need to override the standard blue with your brand color */
 .btn-outline-primary {
     color: var(--bs-primary);
     border-color: var(--bs-primary);
@@ -230,5 +228,5 @@ footer .nav-link:hover {
 .btn-outline-primary:hover {
     background-color: var(--bs-primary) !important;
     border-color: var(--bs-primary) !important;
-    color: var(--bs-light) !important; /* Forces text to light on hover */
+    color: var(--bs-light) !important;
 }
